tests/typec-test/test_out/function.txt
error: type not found
 --> function\root.ctl:1:12
  |
1 | fn main -> unit {}
  |            ^^^^ this does not exist
  |
  = info: queried 'unit'

